@@ -3179,5 +3179,21 @@ See also gtk_editable_get_chars().
 </function>
 
 
+<function name="gtk_selection_data_get_uris">
+<description>
+Gets the contents of the selection data as a container of URIs.
+</description>
+<parameters>
+<parameter name="selection_data">
+<parameter_description> a #GtkSelectionData
+</parameter_description>
+</parameter>
+</parameters>
+<return>If the selection data contains a list of
+URIs, a container containing the URIs, otherwise an empty container.
+
+Since: 2.6
+</return>
+</function>
 
 </root>
