@@ -1,3 +1,11 @@
+2009-05-05  Murray Cumming  <murrayc@murrayc.com>
+
+	Gtk::SelectionData::get_uris() documentation fix.
+	
+	* gtk/src/gtk_docs_override.xml: Add an override for 
+	gtk_selection_data_get_uris() because the C documentation mentions freeing 
+	strings.
+
 2009-05-05  Johannes Schmid <jschmid@openismus.com>
 
 	* gtk/gtkmm/box.ccg:
